# sep

./: README.md
src/: CMakeLists.txt  main.cpp  myi3status
